--- a/assets/scss/components/product.scss
+++ b/assets/scss/components/product.scss
@@ -30,16 +30,40 @@
     position: relative;
     z-index: 10;
 
+    .type {
+      color: rgba($color: white, $alpha: 0.7);
+      font-size: 12px;
+      margin-top: 2px;
+    }
+
     .price {
-      color: rgba($color: white, $alpha: 0.8);
-      font-size: 14px;
+      color: rgba($color: white, $alpha: 0.9);
+      margin-top: 8px;
+      font-weight: bold;
     }
   }
 
 
-  img {
+  .image-container {
     width: 100%;
     height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .image {
+      &_show {
+        display: block;
+      }
+      &_hide {
+        display: none;
+      }
+    }
+    
+    img {
+      width: 100%;
+      height: 200px;
+    }
 
     @media (max-width: 420px) {
       height: auto;
