--- a/assets/scss/pages/product-detail.scss
+++ b/assets/scss/pages/product-detail.scss
@@ -40,6 +40,14 @@
   height: auto;
   border-radius: 4px;
 
+  &_hide {
+    display: none;
+  }
+
+  &_show {
+    display: block;
+  }
+
   @media (max-width: 680px) {
     width: 100%;
   }
