--- a/assets/scss/components/input.scss
+++ b/assets/scss/components/input.scss
@@ -44,24 +44,21 @@ input, textarea {
 }
 
 .items {
-  background: white;
   position: absolute;
   width: 100%;
   transition: 0.2s ease-in-out;
   border-radius: 0 0 2px 2px;
-
-  &_visible {
-    opacity: 1;
-    z-index: 20;
-  }
-
-  &_hidden {
-    opacity: 0;
-    z-index: -1;
-  }
+  z-index: 20;
 
   .item {
-    padding: 4px 8px;
     color: black;
+    background: white;
+    height: 0;
+    overflow: hidden;
+    transition: 0.1s ease-in-out;
+    
+    &_visible {
+      height: 70px;
+    }
   }
 }
