--- a/assets/scss/pages/landing.scss
+++ b/assets/scss/pages/landing.scss
@@ -101,3 +101,33 @@
     }
   }
 }
+
+.dropdown-item {
+  display: flex;
+  align-items: flex-start;
+  transition: 0.1s ease-in-out;
+  padding: 5px 10px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+
+  &:hover {
+    background: rgba($color: #000000, $alpha: 0.05);
+    cursor: pointer;
+  }
+
+  .image {
+    height: 50px;
+    width: 50px;
+  }
+  .info {
+    margin-left: 12px;
+    font-size: 16px;
+
+    .price {
+      font-size: 14px;
+      margin-top: 2px;
+      color: rgba($color: #000000, $alpha: 0.5);
+    }
+  }
+}
